// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardFriendlyViewAndroid matches last snapshot 1`] = `
<View
  behavior="padding"
  testID="123"
>
  <Text>
    Children
  </Text>
</View>
`;

exports[`KeyboardFriendlyViewiOS matches last snapshot 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={64}
  testID="123"
>
  <Text>
    Children
  </Text>
</KeyboardAvoidingView>
`;
